Bug 160405, Browser doesn't load private colormap. Update the previous (martinl%netscape.com) checkin to support Sun Solaris. a=jdunn.