mozilla/widget/src/gtksuperwin/gdksuperwin.c
@@ -143,14 +143,14 @@ gdk_superwin_new (GdkWindow *parent_window,
   attributes.width = width;
   attributes.height = height;
   attributes.wclass = GDK_INPUT_OUTPUT;
-#if defined (__hpux) || defined (_AIX)
+#if defined (__hpux) || defined (_AIX) || defined(SUNOS4) || defined(SOLARIS)
   attributes.colormap = gdk_rgb_get_cmap();
 #endif
   attributes.visual = gdk_rgb_get_visual();
   attributes.event_mask = GDK_VISIBILITY_NOTIFY_MASK;
 
   attributes_mask = GDK_WA_VISUAL | GDK_WA_X | GDK_WA_Y;
-#if defined (__hpux) || defined (_AIX)
+#if defined (__hpux) || defined (_AIX) || defined(SUNOS4) || defined(SOLARIS)
   attributes_mask = attributes_mask | GDK_WA_COLORMAP;
 #endif
 
